style: fix gap of features section

--- a/style.css
+++ b/style.css
@@ -415,7 +415,6 @@ h2 {
 
   .features__feature {
     align-items: flex-start;
-    gap: 2rem;
   }
 
   .how-we-work {
